# fastapi-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/: release-please-config.json  renovate.json
.github/workflows/: create-release-notes.yaml
fastapi-app/: .env.example  Dockerfile  alembic.ini  mypy.toml  pyproject.toml  pytest.ini  ruff.toml
fastapi-app/scripts/: create_sync_env.sh  format_ruff.sh  lint_ruff.sh  mypy.sh  pytest.sh  run_migrations.sh  upgrade_env.sh
fastapi-app/src/: main.py
fastapi-app/src/adapter/: __init__.py
fastapi-app/src/adapter/database/: base.py  user.py
fastapi-app/src/adapter/openid/: __init__.py
fastapi-app/src/api/: __init__.py  api_base.py  base.py  dependencies.py  routers.py  well_known.py
fastapi-app/src/api/v1/: __init__.py  auth.py  users.py
fastapi-app/src/core/: __init__.py  config.py  utils.py
fastapi-app/src/core/application/: __init__.py  create_app.py  docs.py  exceptions.py  run_server.py
fastapi-app/src/core/db/: __init__.py  session.py
fastapi-app/src/core/dependencies/: __init__.py  adapters.py  api.py  services.py
fastapi-app/src/core/ports/: __init__.py  identity_provider.py
fastapi-app/src/core/ports/repositories/: __init__.py  base.py  user.py
fastapi-app/src/crud/: __init__.py  base.py  user.py
fastapi-app/src/domain/models/: __init__.py  base_class.py  soft_delete_mixin.py  user.py
fastapi-app/src/domain/schemas/: __init__.py  base.py  user.py  well_known.py
fastapi-app/src/infrastructure/db/: __init__.py  session.py
fastapi-app/src/infrastructure/db/repositories/: __init__.py  base.py  user.py
fastapi-app/src/integrations/: __init__.py
fastapi-app/src/integrations/openid/: __init__.py  keycloak_auth.py  openid_auth.py
fastapi-app/src/migrations/: __init__.py  env.py
fastapi-app/src/migrations/versions/: 2025_11_17_1905-f10643f27ae7_user_model.py  2026_03_11_2200-9a0046ec4933_user_model.py  2026_03_17_1940-5dcdd854b417_add_created_and_updated_at_in_base_model.py  2026_03_21_2123-32454ba8321b_add_init_migration.py
fastapi-app/src/models/: __init__.py  base_class.py  soft_delete_mixin.py  user.py
fastapi-app/src/schemas/: __init__.py  openid.py  user.py  well_known.py
fastapi-app/src/services/: __init__.py  base.py  user.py
fastapi-app/tests/: __init__.py  conftest.py  utils.py
fastapi-app/tests/test_api/: __init__.py
fastapi-app/tests/test_crud/: __init__.py
fastapi-app/tests/test_models/: __init__.py
fastapi-app/tests/test_schemas/: __init__.py
fastapi-app/tests/test_services/: __init__.py
