[project]
name = "template-api"
version = "0.1.0"
description = "Template for FastAPI projects"
authors = [{ name = "Artem Kuznetsov", email = "artyom.20century@gmail.com" }]
requires-python = "==3.14.0"
dependencies = [
    "fastapi==0.121.2",
    "uvicorn[standard]==0.38.0",
    "pydantic[email]==2.12.4",
    "pydantic-settings==2.12.0",
    "sqlalchemy[asyncio]==2.0.44",
    "asyncpg==0.30.0",
    "pytz==2025.2",
    "alembic==1.17.2",
    "sqlalchemy-easy-softdelete==0.8.3",
    "itsdangerous==2.2.0",
    "requests-oauthlib==2.0.0",
    "httpx==0.28.1",
    "python-dateutil==2.9.0.post0",
    "orjson==3.11.4",
    "gunicorn==23.0.0",
    "aiohttp==3.13.2",
    "hatchling==1.27.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-env==1.2.0",
    "mypy==1.18.2",
    "types-pytz==2025.2.0.20251108",
    "types-python-dateutil==2.9.0.20251115",
    "ruff==0.14.5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
