[project]
name = "template-api"
version = "0.1.0"
description = "Template for FastAPI projects"
authors = [{ name = "Artem Kuznetsov", email = "artyom.20century@gmail.com" }]
requires-python = "==3.14.0"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.13.1",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "pytz==2026.1.post1",
    "alembic==1.18.4",
    "sqlalchemy-easy-softdelete==0.9.0",
    "itsdangerous==2.2.0",
    "requests-oauthlib==2.0.0",
    "httpx==0.28.1",
    "python-dateutil==2.9.0.post0",
    "aiohttp==3.13.3",
    "hatchling==1.29.0",
    "authlib==1.6.9",
    "pytest==9.0.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-env==1.6.0",
    "mypy==1.19.1",
    "types-pytz==2026.1.1.20260304",
    "types-python-dateutil==2.9.0.20260305",
    "ruff==0.15.12",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
