[project]
name = "template-api"
version = "0.1.0"
description = "Template for FastAPI projects"
authors = [{ name = "Artem Kuznetsov", email = "artyom.20century@gmail.com" }]
requires-python = "==3.14.0"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.1",
    "sqlalchemy[asyncio]==2.0.50",
    "asyncpg==0.31.0",
    "pytz==2026.2",
    "alembic==1.18.4",
    "sqlalchemy-easy-softdelete==0.9.0",
    "itsdangerous==2.2.0",
    "requests-oauthlib==2.0.0",
    "httpx==0.28.1",
    "python-dateutil==2.9.0.post0",
    "aiohttp==3.14.1",
    "hatchling==1.29.0",
    "authlib==1.7.2",
    "pytest==9.0.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-env==1.6.0",
    "mypy==2.1.0",
    "types-pytz==2026.2.0.20260518",
    "types-python-dateutil==2.9.0.20260518",
    "ruff==0.15.16",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
